Istio/exit_on_zero_active_connections.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ncsc-deployment
  namespace: app
  labels:
    app: ncsc-app
  annotations:
    proxy.istio.io/config: |
      proxyMetadata:
        EXIT_ON_ZERO_ACTIVE_CONNECTIONS: 'true'
spec:
  replicas: 4
  selector:
    matchLabels:
      app: ncsc-app
  template:
    metadata:
      labels:
        app: ncsc-app
    spec:
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: topology.kubernetes.io/zone
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app: ncsc-app
          matchLabelKeys:
            - pod-template-hash
      containers:
      - name: ncsc-app
        image: 950274644703.dkr.ecr.ap-northeast-2.amazonaws.com/ncsc-app-repo:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
