Istio/istio-virtual-service1.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: app1
  namespace: frontend
spec:
  hosts:
  - "*"
  gateways:
  - istio-system/my-app-gateway
  http:
  - match:
    - port: 8080  # 8080 포트로 오는 요청 매칭
    route:
    - destination:
        host: vote.frontend.svc.cluster.local
        port:
          number: 8080  # NodePort 서비스에서 지정한 포트
